Table Script is Working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <form>
         <label for=""><b>Enter Table # : </b></label>
         <input type="number" name="tab" id="tab">
-        <input type="button" value="GO">
+        <input type="button" value="GO" onclick="dispTable()">
     </form>
     <div id="dispArea">
 
