Time function is working

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
         <input type="number" name="tab" id="tab">
         <input type="button" value="GO" onclick="dispTable()">
     </form>
-    <div id="dispArea">
+    <div id="tableArea">
 
     </div>
 
+    <footer>
+        <div id="timeArea"></div>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
