title placed - code update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Stylesheet -->
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Welcome to Table App</title>
 </head>
 <body>
     <h1>Table Application</h1>
